# image-codes

./: .gitignore  Cargo.toml  README.md
src/: barcode.rs  core.rs  encoder.rs  encoders.rs  main.rs  qrcode.rs  resources.rs  response_format.rs
src/encoders/: barcode.rs  qrcode.rs
static/: index.html
