[package]
name = "image-codes"
version = "0.1.0"
authors = ["Nikolai Golub <nikolay.v.golub@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.2"
serde = "1.0"
barcoders = {version = "1.0", features = ["image",]}
base64 = "0.10"
qrcode = "0.11"
image = "0.22"
imageproc = "0.19"
rusttype = "0.7"